# gasdyn

./: .gitignore  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
apps/webapp/: app.py  app.py~  requirements.txt
docs/: examples.md  index.md  installation.md  nomenclature.md
docs/api/: index.md
docs/cli/: index.md
docs/theory/: index.md
docs/theory/relations/: isentropic.md  normal_shock.md  oblique_shock.md  prandtl_meyer.md
docs/theory/taylor_maccoll/: derivation.md  index.md
docs/user-guide/: basic-usage.md  index.md
docs/vnv/: index.md
docs/vnv/validation/: index.md
docs/vnv/verification/: index.md
src/gasdyn/: __init__.py
src/gasdyn/cli/: __init__.py  app.py  callbacks.py  cmd_isentropic.py  cmd_normal_shock.py  cmd_oblique.py  cmd_prandtl_meyer.py  cmd_taylor_maccoll.py  formatters.py
src/gasdyn/core/: __init__.py  units.py
src/gasdyn/relations/: __init__.py  isentropic.py  normal_shock.py  oblique_shock.py  prandtl_meyer.py
src/gasdyn/taylor_maccoll/: __init__.py  lookup.py  taylor_maccoll.py
tests/: test_cli.py  test_error_paths.py  test_isentropic.py  test_normal_shock.py  test_oblique_shock.py  test_prandtl_meyer.py  test_taylor_maccoll.py  test_units.py
