[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gasdyn"
dynamic = ["version"]
description = "Compressible inviscid flow calculator: shocks, expansions, isentropic relations"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    {name = "Christoph Hader", email = "chader@arizona.edu"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["compressible-flow", "gas-dynamics", "shocks", "isentropic", "aerodynamics"]

dependencies = [
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/uahypersonics/gasdyn"
Repository = "https://github.com/uahypersonics/gasdyn"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
